--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -16,9 +16,9 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
+QUEUE_CONNECTION=redis
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
