--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -64,3 +64,6 @@ NEWS_API_URL=https://newsapi.org/v2
 NEWS_API_KEY=c95ec738abe74b708871b99d6673cc85
 MEDIA_STACK_API_URL=http://api.mediastack.com/v1
 MEDIA_STACK_API_KEY=6490528b65c9d28894748cf10c6d0a52
+
+SCOUT_DRIVER=elastic
+ELASTICSEARCH_HOST=http://elasticsearch:9200
