--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -6,9 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "babenkoivan/elastic-scout-driver": "^3.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
+        "laravel/scout": "^10.3",
         "laravel/tinker": "^2.8",
         "predis/predis": "^2.2",
         "spatie/laravel-permission": "^5.11"
