--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -67,3 +67,4 @@ MEDIA_STACK_API_KEY=6490528b65c9d28894748cf10c6d0a52
 
 SCOUT_DRIVER=elastic
 ELASTICSEARCH_HOST=http://elasticsearch:9200
+ELASTICSEARCH_SSL=false
