--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/scout": "^10.3",
+        "laravel/telescope": "^4.16",
         "laravel/tinker": "^2.8",
         "predis/predis": "^2.2",
         "spatie/laravel-permission": "^5.11"
