--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -9,6 +9,7 @@
         "babenkoivan/elastic-scout-driver": "^3.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
+        "laravel/horizon": "^5.21",
         "laravel/sanctum": "^3.2",
         "laravel/scout": "^10.3",
         "laravel/telescope": "^4.16",
