--- a/react/package.json
+++ b/react/package.json
@@ -19,8 +19,13 @@
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "typescript": "^5.2.2"
   }
 }
