--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "babenkoivan/elastic-scout-driver": "^3.1",
+        "babenkoivan/elastic-scout-driver-plus": "^4.6",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/horizon": "^5.21",
