--- a/react/package.json
+++ b/react/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "web-vitals": "^3.4.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.3",
