--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
     laravel.test:
+        container_name: 'laravel'
         build:
             context: ./vendor/laravel/sail/runtimes/8.2
             dockerfile: Dockerfile
@@ -26,6 +27,7 @@ services:
             - redis
             - elasticsearch
     mysql:
+        container_name: 'database'
         image: 'mysql/mysql-server:8.0'
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
@@ -50,6 +52,7 @@ services:
             retries: 3
             timeout: 5s
     redis:
+        container_name: 'redis'
         image: 'redis:alpine'
         ports:
             - '${FORWARD_REDIS_PORT:-6379}:6379'
@@ -65,6 +68,7 @@ services:
             retries: 3
             timeout: 5s
     elasticsearch:
+        container_name: 'elasticsearch'
         image: 'docker.elastic.co/elasticsearch/elasticsearch:7.15.0'
         environment:
             - discovery.type=single-node
