--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM php:8.2-fpm
 
 ENV COMPOSER_ALLOW_SUPERUSER=1
 
-RUN apt-get update -y && apt-get install -y openssl zip unzip git curl libonig-dev libzip-dev
+RUN apt-get update -y && apt-get install -y openssl zip unzip git curl libonig-dev libzip-dev vim nano
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
@@ -12,9 +12,12 @@ RUN docker-php-ext-configure pcntl --enable-pcntl
 
 WORKDIR /app/backend
 
-COPY . .
 COPY .env.example .env
+COPY . .
+
+RUN composer install
+RUN php artisan key:generate
 
 EXPOSE 8000
 
-CMD bash -c "composer install && php artisan key:generate && php artisan serve --host 0.0.0.0"
+CMD bash -c "php artisan serve --host 0.0.0.0"
