--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,8 +9,8 @@ RUN npm install --production
 # Builder Stage
 FROM node:18-alpine AS builder
 WORKDIR /app
+COPY --from=deps /app/. .
 COPY --from=deps /app/node_modules ./node_modules
-COPY . .
 ENV NEXT_TELEMETRY_DISABLED 1
 RUN npm run build
 
@@ -24,6 +24,7 @@ RUN addgroup --system --gid 1001 nodejs \
 COPY --from=builder --chown=nextjs:nodejs /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package.json ./package.json
+COPY --from=builder /app/. .
 USER nextjs
 EXPOSE 3000
 ENV PORT 3000
