--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,8 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "web-vitals": "^3.4.0",
-    "sass": "^1.68.0"
+    "sass": "^1.68.0",
+    "web-vitals": "^3.4.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.3",
@@ -30,6 +30,6 @@
     "@types/react": "18.2.21",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "typescript": "^5.2.2"
+    "typescript": "5.2.2"
   }
 }
