--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,17 +2,17 @@
 FROM node:18-alpine AS deps
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
-COPY . .
+COPY . ./
 COPY package.json ./
 RUN npm install --production
 
 # Builder Stage
-#FROM node:18-alpine AS builder
-#WORKDIR /app
-#COPY --from=deps /app/. .
-#COPY --from=deps /app/node_modules ./node_modules
-#ENV NEXT_TELEMETRY_DISABLED 1
-#RUN npm run build
+FROM node:18-alpine AS builder
+WORKDIR /app
+COPY --from=deps /app/. .
+COPY --from=deps /app/node_modules ./node_modules
+ENV NEXT_TELEMETRY_DISABLED 1
+RUN npm run build
 
 # Runner Stage
 FROM node:18-alpine AS runner
@@ -24,7 +24,7 @@ RUN addgroup --system --gid 1001 nodejs \
 COPY --from=builder --chown=nextjs:nodejs /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package.json ./package.json
-COPY --from=builder /app/. .
+COPY --from=builder /app .
 USER nextjs
 EXPOSE 3000
 ENV PORT 3000
