--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 APP_NAME=Innoscripta
 APP_ENV=local
-APP_KEY=base64:o3JbWRw7k3QnolB3BF3D/k7EXW7h2I9et54GeGWT+LI=
+APP_KEY=base64:SFwWnGSifstrEO0ESZ6q6s/zGYNl+ZMugbkGVUKwg2w=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -12,7 +12,7 @@ DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=laravel
+DB_USERNAME=sail
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
