--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.3.1",
     "fetch-intercept": "^2.4.0",
     "next": "^13.4.19",
     "react": "^18.2.0",
