--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "lib": [
       "dom",
       "dom.iterable",
@@ -18,7 +22,7 @@
     "jsx": "preserve"
   },
   "include": [
-    "next-env.d.ts",
+    "./next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
   ],
