--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,19 @@ services:
       - ./dbdata:/var/lib/mysql
     networks:
       - app
+  phpmyadmin:
+    container_name: phpmyadmin
+    image: phpmyadmin
+    environment:
+      PMA_HOST: mysql
+      PMA_PORT: 3306
+      PMA_ARBITRARY: 1
+    ports:
+      - 8080:80
+    depends_on:
+      - mysql
+    networks:
+      - app
   redis:
     container_name: 'redis'
     image: 'redis:alpine'
