--- a/backend/.env.example
+++ b/backend/.env.example
@@ -60,10 +60,15 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 GUARDIAN_API_URL=https://content.guardianapis.com
 GUARDIAN_API_KEY=test
+
 NEWS_API_URL=https://newsapi.org/v2
 NEWS_API_KEY=c95ec738abe74b708871b99d6673cc85
+
 MEDIA_STACK_API_URL=http://api.mediastack.com/v1
 MEDIA_STACK_API_KEY=6490528b65c9d28894748cf10c6d0a52
+
+NEWYORK_TIMES_API_URL=https://api.nytimes.com/svc/
+NEWYORK_TIMES_API_KEY=LqRN1w7XrZYdVTTo5aYSwLlVtJXBEcRS
 
 SCOUT_DRIVER=Matchish\ScoutElasticSearch\Engines\ElasticSearchEngine
 SCOUT_DEBUG=true
