--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -51,6 +51,19 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+    phpmyadmin:
+        container_name: phpmyadmin
+        image: phpmyadmin
+        environment:
+            PMA_HOST: mysql
+            PMA_PORT: 3306
+            PMA_ARBITRARY: 1
+        ports:
+            - 8080:80
+        depends_on:
+            - mysql
+        networks:
+            - sail
     redis:
         container_name: redis
         image: 'redis:alpine'
