--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,4 +1,4 @@
-name: TheProject
+name: TheBackendProject
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build-and-deploy:
+  backend:
     runs-on: ubuntu-latest
 
     steps:
