--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -18,28 +18,28 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get upgrade -y
-        working-directory: ./
+        working-directory: ./frontend
 
       - name: Clean apt cache
         run: sudo apt-get clean
-        working-directory: ./
+        working-directory: ./frontend
 
       - name: Remove containerd.io
         run: sudo apt-get remove containerd.io
-        working-directory: ./
+        working-directory: ./frontend
 
       - name: Reinstall Docker
         run: |
           sudo apt-get install -y docker.io
           sudo systemctl start docker
-        working-directory: ./
+        working-directory: ./frontend
 
       - name: Set Docker Build Context
         run: echo "DOCKER_BUILDKIT=1" | sudo tee -a /etc/environment
-        working-directory: ./
+        working-directory: ./frontend
 
       - name: Build and deploy Docker container
         run: |
           docker build -t frontend-app .
           docker run -d -p 3000:3000 frontend-app
-        working-directory: ./
+        working-directory: ./frontend
