--- a/backend/composer.json
+++ b/backend/composer.json
@@ -14,6 +14,7 @@
         "laravel/telescope": "^4.16",
         "laravel/tinker": "^2.8",
         "matchish/laravel-scout-elasticsearch": "^7.3",
+        "opcodesio/log-viewer": "^3.1",
         "predis/predis": "^2.2",
         "spatie/laravel-permission": "^5.11"
     },
