--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -30,9 +30,14 @@ jobs:
       - name: Wait for the container to start
         run: sleep 10
 
-      - name: Test the application
+      - name: Test the application inside the Docker container
         run: |
-          docker exec backend-app bash -c "php artisan test"
+          docker exec backend-app bash -c 
+          "cp .env.example .env.testing &&
+          sed -i 's/DB_CONNECTION=mysql/DB_CONNECTION=sqlite/g' .env.testing && sed -i 's/DB_HOST=127.0.0.1/DB_HOST=:memory:/g' .env.testing &&
+          php artisan key:generate &&
+          php artisan migrate:fresh --seed --env=testing &&
+          php artisan test"
 
       - name: Check the application url
         run: curl http://localhost:8000
