--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -28,7 +28,7 @@ jobs:
         working-directory: ./
 
       - name: Wait for the container to start
-        run: sleep 10
+        run: sleep 3
 
       - name: Test the application inside the Docker container
         run: |
@@ -37,6 +37,7 @@ jobs:
             sed -i 's/DB_CONNECTION=mysql/DB_CONNECTION=sqlite/g' .env.testing &&
             sed -i 's/DB_HOST=127.0.0.1/DB_HOST=:memory:/g' .env.testing &&
             php artisan key:generate &&
+            touch database/database.sqlite &&
             php artisan migrate:fresh --seed --env=testing &&
             php artisan test
           "
