--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -30,6 +30,12 @@ jobs:
       - name: Wait for the container to start
         run: sleep 3
 
+      - name: Create SQLite database
+        run: |
+          cd backend
+          touch database/database.sqlite
+        working-directory: ./
+
       - name: Test the application inside the Docker container
         run: |
           docker exec backend-app bash -c "
@@ -37,7 +43,6 @@ jobs:
             sed -i 's/DB_CONNECTION=mysql/DB_CONNECTION=sqlite/g' .env.testing &&
             sed -i 's/DB_HOST=127.0.0.1/DB_HOST=:memory:/g' .env.testing &&
             php artisan key:generate &&
-            touch database/database.sqlite &&
             php artisan migrate:fresh --seed --env=testing &&
             php artisan test
           "
