--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - mysql
     networks:
       - app
+
   frontend:
     container_name: 'frontend'
     build:
@@ -31,6 +32,7 @@ services:
     command: npm start
     networks:
       - app
+
   mysql:
     container_name: 'mysql'
     image: mysql:8.0
@@ -42,11 +44,12 @@ services:
     ports:
       - 8889:3306
     volumes:
-      - ./dbdata:/var/lib/mysql
+      - ./docker/volumes/mysql:/var/lib/mysql
     networks:
       - app
+
   phpmyadmin:
-    container_name: phpmyadmin
+    container_name: 'phpmyadmin'
     image: phpmyadmin
     environment:
       PMA_HOST: mysql
@@ -58,13 +61,14 @@ services:
       - mysql
     networks:
       - app
+
   redis:
     container_name: 'redis'
     image: 'redis:alpine'
     ports:
       - '${FORWARD_REDIS_PORT:-6379}:6379'
     volumes:
-      - ./redisdata:/data
+      - ./docker/volumes/redis:/data
     networks:
       - app
   elasticsearch:
@@ -83,3 +87,15 @@ networks:
 volumes:
   app:
     driver: local
+  mysql:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ./docker/volumes/mysql
+  redis:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ./docker/volumes/redis
