--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -7,6 +7,25 @@ on:
     branches: ["master"]
 
 jobs:
+  lint:
+    name: Lint PHP files using Pint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+
+      - name: Pint
+        uses: aglipanci/laravel-pint-action@0.1.0
+        with:
+          preset: laravel
+
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Fix code style
+          skip_fetch: true
   backend:
     runs-on: ubuntu-latest
 
