--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
+    "eslint-config-next": "^11.1.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "typescript": "5.2.2"
