--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
@@ -30,6 +31,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
+    "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
