--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.4",
     "jest": "^29.7.0",
