--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,10 +33,13 @@
     "@types/react": "18.2.21",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "^11.1.4",
+    "eslint": "^8.50.0",
+    "eslint-config-next": "^13.5.4",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.0.3",
     "typescript": "5.2.2"
   }
 }
