--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
-    laravel.test:
-        container_name: laravel
+    laravel:
+        container_name: 'sail_laravel'
         build:
             context: ./vendor/laravel/sail/runtimes/8.2
             dockerfile: Dockerfile
@@ -27,7 +27,7 @@ services:
             - redis
             - elasticsearch
     mysql:
-        container_name: database
+        container_name: 'sail_mysql'
         image: 'mysql/mysql-server:8.0'
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
@@ -52,7 +52,7 @@ services:
             retries: 3
             timeout: 5s
     phpmyadmin:
-        container_name: phpmyadmin
+        container_name: 'sail_phpmyadmin'
         image: phpmyadmin
         environment:
             PMA_HOST: mysql
@@ -65,7 +65,7 @@ services:
         networks:
             - sail
     redis:
-        container_name: redis
+        container_name: 'sail_redis'
         image: 'redis:alpine'
         ports:
             - '${FORWARD_REDIS_PORT:-6379}:6379'
@@ -81,7 +81,7 @@ services:
             retries: 3
             timeout: 5s
     elasticsearch:
-        container_name: elasticsearch
+        container_name: 'sail_elasticsearch'
         image: 'docker.elastic.co/elasticsearch/elasticsearch:7.15.0'
         environment:
             - discovery.type=single-node
