--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,6 +15,13 @@ DB_DATABASE=laravel
 DB_USERNAME=laravel
 DB_PASSWORD=password
 
+#DB_CONNECTION=pgsql
+#DB_HOST=postgresql
+#DB_PORT=5432
+#DB_DATABASE=laravel
+#DB_USERNAME=laravel
+#DB_PASSWORD=password
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
 QUEUE_CONNECTION=redis
