--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,11 +2,11 @@ FROM php:8.2-fpm
 
 ENV COMPOSER_ALLOW_SUPERUSER=1
 
-RUN apt-get update -y && apt-get install -y openssl zip unzip git curl libonig-dev libzip-dev
+RUN apt-get update -y && apt-get install -y openssl zip unzip git curl libonig-dev libzip-dev libpq-dev
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-RUN docker-php-ext-install mysqli pdo_mysql pcntl
+RUN docker-php-ext-install mysqli pdo_mysql pcntl pdo_pgsql
 
 RUN docker-php-ext-configure pcntl --enable-pcntl
 
