--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,24 @@ services:
     networks:
       - app
 
+  postgresql:
+    container_name: 'postgresql'
+    image: 'postgres:13'
+    ports:
+      - '${FORWARD_DB_PORT:-5432}:5432'
+    environment:
+      POSTGRES_USER: '${DB_USERNAME}'
+      POSTGRES_PASSWORD: '${DB_PASSWORD}'
+      POSTGRES_DB: '${DB_DATABASE}'
+    volumes:
+      - ./docker/volumes/postgresql:/var/lib/postgresql/data
+    networks:
+      - sail
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${DB_USERNAME}" ]
+      retries: 3
+      timeout: 5s
+
   phpmyadmin:
     container_name: 'phpmyadmin'
     image: phpmyadmin
