--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,9 +16,9 @@ DB_USERNAME=laravel
 DB_PASSWORD=password
 
 #DB_CONNECTION=pgsql
-#DB_HOST=postgresql
+#DB_HOST=postgres
 #DB_PORT=5432
-#DB_DATABASE=laravel
+#DB_DATABASE=postgres
 #DB_USERNAME=laravel
 #DB_PASSWORD=password
 
