--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,6 +22,13 @@ DB_PASSWORD=password
 #DB_USERNAME=laravel
 #DB_PASSWORD=password
 
+MONGO_DB_CONNECTION=mongodb
+MONGO_DB_HOST=mongodb
+MONGO_DB_PORT=27017
+MONGO_DB_DATABASE=laravel
+MONGO_DB_USERNAME=laravel
+MONGO_DB_PASSWORD=password
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
 QUEUE_CONNECTION=redis
