--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,6 +111,61 @@ services:
     networks:
       - app
 
+  nodejs:
+    container_name: 'nodejs'
+    build:
+      context: ./microservices/nodejs
+      dockerfile: Dockerfile
+    ports:
+      - "4000:4000"
+    networks:
+      - app
+
+  golang:
+    container_name: 'golang'
+    build:
+      context: ./microservices/golang
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    networks:
+      - app
+
+  python:
+    container_name: 'python'
+    build:
+      context: ./microservices/python
+      dockerfile: Dockerfile
+    ports:
+      - "8085:6000"
+    networks:
+      - app
+
+  mongodb:
+    container_name: 'mongodb'
+    image: mongo:4.4
+    environment:
+      MONGO_INITDB_DATABASE: mongodb
+    ports:
+      - "27017:27017"
+    volumes:
+      - ./docker/volumes/mongodb:/data/db
+    networks:
+      - app
+
+  mongodb-ui:
+    container_name: 'mongodb-ui'
+    image: mongo-express
+    environment:
+      ME_CONFIG_MONGODB_SERVER: mongodb
+      ME_CONFIG_MONGODB_PORT: 27017
+      ME_CONFIG_BASICAUTH_USERNAME: laravel
+      ME_CONFIG_BASICAUTH_PASSWORD: password
+    ports:
+      - 8082:8082
+    networks:
+      - app
+
 networks:
   app:
     driver: bridge
@@ -134,3 +189,9 @@ volumes:
       type: none
       o: bind
       device: ./docker/volumes/postgres
+  mongodb:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ./docker/volumes/mongodb
