--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,12 +22,9 @@ DB_PASSWORD=password
 #DB_USERNAME=laravel
 #DB_PASSWORD=password
 
-MONGO_DB_CONNECTION=mongodb
-MONGO_DB_HOST=mongodb
-MONGO_DB_PORT=27017
-MONGO_DB_DATABASE=mongodb
-MONGO_DB_USERNAME=laravel
-MONGO_DB_PASSWORD=password
+#DB_CONNECTION=mongodb
+#DB_HOST=mongodb
+#DB_PORT=27017
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
