--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,6 +132,8 @@ services:
       - "5000:5000"
     networks:
       - app
+    depends_on:
+      - mongodb
 
   python:
     container_name: 'python'
@@ -142,6 +144,8 @@ services:
       - "8085:8085"
     networks:
       - app
+    depends_on:
+      - mongodb
 
   mongodb:
     container_name: 'mongodb'
