--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
@@ -26,6 +27,7 @@
     "web-vitals": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.22.15",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
@@ -33,12 +35,14 @@
     "@types/react": "18.2.21",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "babel-cli": "^6.26.0",
     "eslint": "^8.50.0",
     "eslint-config-next": "^13.5.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^22.1.0",
     "prettier": "^3.0.3",
     "typescript": "5.2.2"
   }
